Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11942

BLACKHOLE is no longer active in 10.1 by default, mysql_upgrade not handling the situation

    XMLWordPrintable

Details

    • 10.1.22

    Description

      MariaDB 10.1 binary packages no longer come with BLACKHOLE storage engine compiled in, it comes as a loadable plugin now instead, which is not loaded by default.

      When upgrading a 10.0 instance with a BLACKHOLE table in it mysql_upgrade detects the problem, but doesn't fix it.

      [...]
      Phase 5/6: Checking and upgrading tables
      Processing databases
      information_schema
      performance_schema
      test
      test.t1
      Error    : Unknown storage engine 'BLACKHOLE'
      error    : Corrupt
       
      Repairing tables
      test.t1
      Error    : Unknown storage engine 'BLACKHOLE'
      error    : Corrupt
      [...]
      

      Suggested fix: make mysql_upgrade check I_S.TABLES for unknown storage engine messages in TABLE_COMMENTS, and issue appropriate INSTALL [PLUGIN|SONAME] statements for the bundled engine plugins before actually trying to check and repair tables.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              hholzgra Hartmut Holzgraefe
              Votes:
              2 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.