make mysql_upgrade try to install missing storage engine plugins (MDEV-11942)